Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
dev
-
683f3bf56 (dev), 9a24cb866 (6.7)
Description
I've noticed this failing a lot, but it's "just" flaky:
Attachments
For Gerrit Dashboard: QTBUG-120008 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
524814,3 | QJSEngine: Correctly detect QVariant | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
538399,2 | QJSEngine: Correctly detect QVariant | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |