QJSEngine: Correctly detect QVariant

With the introduction of QQmlVarForeign, a QVariant can now be
represented as as either a QV4::VariantObject, or as a
QQmlValueTypeWrapper wrapping a QVariant.
Fix QJSEngine::isVariant to consider the new case, too.

Fixes: QTBUG-120008
Change-Id: I6aefa64c315b9ed1c7d1e214486f47556ef780fc
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 683f3bf56f67ad428e24d851903e2ddf86cef796)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>